# pysetup2

./: .gitignore  README.md  pyproject.toml  struct.json
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pysetup.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pysetup/: exceptions.html  structure_parser.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  pysetup.rst.txt
pysetup/: __main__.py  _funcs.py  exceptions.py  files.py  structure_parser.py
