[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysetup"
version = "2.0.0.dev1"
authors = [
  { name="GBiondo1310", email="giacomo.biondelli@gmail.com" },
]
description = "Set up your new python project quickly"
readme = "README.md"
dependencies = [
    "progress==1.6",
    "progressbar2==4.4.2",
    "alive-progress==3.1.5",
    "tqdm==4.66.2"
]

requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/GBiondo1310/pysetup"
Issues = "https://github.com/GBiondo1310/pysetup/issues"